--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-spring": "^9.2.4",
     "topojson-client": "^3.1.0",
     "topojson-server": "^3.0.1",
@@ -26,7 +28,7 @@
     "not dead"
   ],
   "engines": {
-    "node": "12.x"
+    "node": "14.17.x"
   },
   "repository": {
     "url": "https://glitch.com/edit/#!/glitch-hello-react"
